# PyAniParser

./: .gitignore  README.md  hatch_build.py  pyproject.toml
.github/workflows/: publish.yml
docs/: CHANGELOG.md  README.md
src/pyaniparser/: __init__.py  types.py
tests/: test.py  test_basic.py
