[project]
name = "pyaniparser"
version = "0.0.8"
description = "Python wrapper for Banned.AniParser (NativeAOT C ABI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyaniparser"]
pure = false
include = [
    "src/pyaniparser/lib/**",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/pyaniparser/**",
    "README.md",
]

[tool.hatch.build]
# general build settings (kept empty)

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=9.0.1"]

# ★ 在 wheel target 下挂钩子
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
