[project]
name = "pyaniparser"
version = "0.6.0"
description = "Python wrapper for Banned.AniParser (NativeAOT C ABI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
authors = [
    { name = "banned", email = "banned2054@163.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: Apache Software License",
]
license = { file = "LICENSE" }
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyaniparser"]
pure = false
include = [
    "src/pyaniparser/lib/**",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/pyaniparser/**",
    "README.md",
    "LICENSE",
]

[tool.hatch.build]
# general build settings (kept empty)

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=9.1.0"]

# ★ 在 wheel target 下挂钩子
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
